# genie-querygpt

./: .env.example  Cargo.toml  README.md  run_migrations.sh
crates/querygpt-core/: Cargo.toml
crates/querygpt-core/src/: lib.rs
crates/querygpt-core/src/agents/: column_prune.rs  intent.rs  mod.rs  table.rs
crates/querygpt-core/src/compiler/: join_normalize.rs  mod.rs
crates/querygpt-core/src/dsl/: compile.rs  mod.rs  plan.rs  report_spec.rs  validate.rs
crates/querygpt-core/src/explain/: explain.rs
crates/querygpt-core/src/policy/: rules.rs
crates/querygpt-core/src/rag/: mod.rs  prompt.rs  retrieval.rs
crates/querygpt-core/src/schema/: cards.rs  field_catalog.rs  join_graph.rs  mod.rs  registry.rs  workspaces.rs
crates/querygpt-core/src/sql/: render.rs
crates/querygpt-core/src/validate/: mod.rs  static_check.rs
crates/querygpt-core/tests/: compile_report_spec.rs  pipeline_sql_snapshots.rs  report_spec_validation.rs  sql_render_determinism.rs  sql_render_full_query.rs  sql_render_group_by.rs  sql_render_order_by.rs
crates/querygpt-core/tests/common/: mod.rs  utilities.rs
crates/querygpt-core/tests/snapshots/: compile_report_spec__compile_prepaid_apac_export.snap  pipeline_sql_snapshots__pipeline_sql__prepaid_apac_export.snap  report_spec_validation__snapshot_normalized_spec.snap  report_spec_validation__snapshot_normalized_spec.snap.new  sql_render_full_query__full_query_snapshot_from_reportspec.snap  sql_render_full_query__full_query_with_group_by_and_order_by.snap  (+2 more)
crates/querygpt-server/: Cargo.toml
crates/querygpt-server/src/: main.rs
(+18 files in other folders)
