[package]
name = "querygpt-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
sqlparser = "0.60.0"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
indexmap = { version = "2", features = ["serde"] }
regex = "1"
serde_yaml = "0.9.34"

[dev-dependencies]
insta = { version = "1", features = ["json"] }



