[package]
name = "querygpt-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
querygpt-core = { path = "../querygpt-core" }
dotenv = "0.15"
